[package]
name    = "agentx-sprint2"
version = "0.1.0"
edition = "2021"
authors = ["Venkateshwar Rao Nagala <tenalirama2019@gmail.com>"]
description = "AgentX-Sprint2: FBA-powered A2A purple agent — CAR-bench, τ²-Bench, MAizeBargAIn, OSWorld"

[[bin]]
name = "agentx-sprint2"
path = "src/main.rs"

[dependencies]
# Web framework
axum            = { version = "0.7", features = ["json", "macros"] }
tokio           = { version = "1",   features = ["full"] }
tower           = "0.4"
tower-http      = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"

# HTTP client (calls existing purple_agent FBA pipeline)
reqwest         = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Auth / JWT (reuse AgentX-Phase2 pattern)
jsonwebtoken    = "9"
uuid            = { version = "1",   features = ["v4"] }

# Logging
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy         = "0.15"
thiserror       = "1"
anyhow          = "1"

# Async utilities
futures         = "0.3"
async-trait     = "0.1"
base64 = "0.22.1"

[dev-dependencies]
tokio-test      = "0.4"
axum-test = "20.0.0"

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
strip     = true
